# My_Packages

My_Tank/My_nano_tank/: My_nano_tank.ino  SerialDataLib.hpp
My_Tank/nano_tank/: CMakeLists.txt
My_Tank/nano_tank/launch/: velocity_smoother.launch
My_Tank/nano_tank/param/: velocity_smoother.yaml
My_Tank/nano_tank/scripts/: nano_serial.py
My_Tank/nano_tank/src/: speeds.cpp
install requirement/: bashrc  mongodb.txt
install requirement/ros_install/: vrep_ros_bridge_install.txt
install requirement/ros_install/PC_ros_indigo _install_steps/: after install copy all to bashrc after install.txt  dukto install backup.txt  gazebo7 install.txt
install requirement/ros_install/PC_ros_indigo _install_steps/ROS_sh/: PC64install.sh  for_ARM_board.sh  ros_indigo_base.sh
install requirement/ros_install/vrep_ROS/: vrep_ros_bridge_install.txt
multimaster/config/: config.yaml
multimaster/launch/: master.launch~
multimaster/scripts/: master_sync.py
my_joystick/: package.xml
pointcloud_to_laserscan/launch/: sample_node.launch  sample_nodelet.launch
program/My_Tank/nano_tank/: package.xml
program/My_Tank/nano_tank/launch/: control_tank.launch  tank_driver.launch
program/merge_twist keyboard dx and local path planner dz/: merge_twist.py  readme.txt
program/multimaster/: CMakeLists.txt  package.xml
program/multimaster/config/: config.yaml~
program/multimaster/launch/: master.launch
program/my_joystick/: CMakeLists.txt
program/my_joystick/launch/: control_tank.launch
program/my_joystick/src/: my_joy.cpp
program/pointcloud_to_laserscan/launch/: sample_node.launch~  sample_nodelet.launch~
program/realsense_filter/: CMakeLists.txt  package.xml
program/realsense_filter/launch/: multi_pcl_to_scan.launch  r200.launch  single_pcl_to_scan.launch  single_voxel_filtering.launch
program/realsense_filter/rviz/: realsense_filter.rviz
program/realsense_filter/src/: realsense_cloud_voxel_filtering.cpp
program/ros_myo/: how to use.txt
program/ros_myo/scripts/: myo-rawNode.py
realsense_filter/launch/: depth_img_to_clouds.launch  depthimage_to_scan_xtion.launch  multi_xtion.launch  r200.launch  single_xtion.launch  test.launch  x_axix_fliter.launch
realsense_filter/rviz/: test.rviz
realsense_filter/scripts/: depth_opencv_medianblur.py
realsense_filter/src/: multi_xtion_tf.cpp  realsense_cloud_voxel_filtering.cpp
ros_install_sh/: after install copy all to bashrc after install.txt  realsense install .txt  useful tools.txt
ros_install_sh/GTX960driver/: GTX960_ubuntu_driver.txt
ros_install_sh/ROS sh/: PC64install.sh  kobuki_example.sh
surface pro3 ubuntu install/: shim-signed.tgz  surface ubuntu install.docx
surface pro3 ubuntu install/refind-bin-0.10.4/docs/refind/: bootmode.html  mkrlconf.html  mvrefind.html  refind-install.html  refind-mkdefault.html
ubuntu useful tools/: gedit plugins.txt  joystick_As_Mouse.txt  launch file autostart with ubuntu.h  new ubuntu gigabyte brix i7 install .c  ros problems.txt
ubuntu useful tools/firefox/: TMPpref.txt  bookmarks-2016-08-26.json
ubuntu_install/: anti-virus.txt  caffe_install.txt  clonezilla.txt  cuda install.txt  input methords.txt  java_and_eclips_install.txt  opencv-2.4.11 install.txt  useful tools.txt
ubuntu_install/firefox/: bookmarks-2017-01-20.json  bookmarks-2017-01-25.json
ubuntu_install/joystick_As_Mouse/: xboxdrv-mouse.ini
ubuntu_install/sublime-text 3/: license.txt
