<?xml version="1.0"?>
<package>
  <name>nano_tank</name>
  <version>0.0.0</version>
  <description>The nano_tank package</description>

  <maintainer email="datasharing.wow@gmail.com">PEI</maintainer>

  <license>NO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>amcl</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>urg_node</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>openni2_launch</build_depend>
  <build_depend>robot_pose_ekf</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>amcl</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>urg_node</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
